[package]
name = "matrix-factorization"
version = "0.0.1"
authors = ["Robert Bamler"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A demo of a decentralized recommendation system"

[features]
default = ['std']
std = [
    'frame-support/std',
    'parity-scale-codec/std',
    'frame-system/std',
]

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '2.0' }
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
rand_xoshiro = "0.4.0"

[dev-dependencies]
sp-core = '3.0'
sp-io = '3.0'
sp-runtime = '3.0'
